<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:netsetup="http://schemas.android.com/apk/res/com.unionman.netsetup"
    android:layout_width="500dp"
    android:layout_height="380dp"
    android:background="@drawable/setting_dialog_bg"
    android:orientation="vertical">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
         android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical">
        <com.unionman.netsetup.util.IpAddrEdit
            android:id="@+id/ipet_ipaddr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            netsetup:text="@string/ethernet_ipaddr"
         >
        </com.unionman.netsetup.util.IpAddrEdit>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
   android:layout_marginBottom="20dp"        
        android:gravity="center_vertical">      
        <com.unionman.netsetup.util.IpAddrEdit
            android:id="@+id/ipet_netmask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
          netsetup:text="@string/ethernet_netmask"   
          >
        </com.unionman.netsetup.util.IpAddrEdit>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     android:layout_marginBottom="20dp"      
        android:gravity="center_vertical">           
        <com.unionman.netsetup.util.IpAddrEdit
            android:id="@+id/ipet_gateway"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
          netsetup:text="@string/ethernet_gateway"   
          >
        </com.unionman.netsetup.util.IpAddrEdit>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">        
        <com.unionman.netsetup.util.IpAddrEdit
            android:id="@+id/ipet_dns1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
             netsetup:text="@string/ethernet_dns1"
          >
        </com.unionman.netsetup.util.IpAddrEdit>
    </LinearLayout>

</LinearLayout>
<Button
            android:id="@+id/modify_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_bg"
            android:text="@string/modify"
            android:textSize="20sp"
            android:textColor="@color/white" />
</LinearLayout>