<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="420dp"
    android:layout_height="wrap_content"
    android:background="@drawable/setting_pop_bg" >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/setting_blue_line" />

    <RelativeLayout
        android:id="@+id/dialog_layout"
        android:layout_width="400dp"
        android:layout_height="280dp"
        android:layout_marginTop="50dp" >

        <TextView
            android:id="@+id/dialog_ip_text"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/ip"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dialog_ip_input"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/setting_ip_selector"
            android:gravity="center"
            android:singleLine="true" />

        <TextView
            android:id="@+id/dialog_network_prefix_text"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/network_prefix"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dialog_network_prefix_input"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/setting_ip_selector"
            android:gravity="center"
            android:singleLine="true" />

        <TextView
            android:id="@+id/dialog_defaultGateway_text"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="110dp"
            android:gravity="center"
            android:text="@string/gateway"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dialog_defaultGateway_input"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="110dp"
            android:background="@drawable/setting_ip_selector"
            android:gravity="center"
            android:singleLine="true" />

        <TextView
            android:id="@+id/dialog_dns_text"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="160dp"
            android:gravity="center"
            android:text="@string/dns"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dialog_dns_input"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="160dp"
            android:background="@drawable/setting_ip_selector"
            android:gravity="center"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:gravity="center" >

            <Button
                android:id="@+id/modify_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="@drawable/setting_btn_ok"
                android:text="@string/modify"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/forget_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/setting_btn_ok"
                android:text="@string/forget"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/setting_btn_ok"
                android:text="@string/cancel"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>